# osmgl

./: Makefile.am  configure.ac
example/: Makefile.am  example.cc
include/osmgl/: elements.hh  osmgl.hh
pkgconfig/: libosmgl.pc
src/: Makefile.am  osmgl.cc  rules_bison.yy  rules_flex.ll  tess.cc  tess.hh
